Hever: Make sure alignfull first-child doesn't conflict with hidden homepage title

--- a/hever/sass/_extra-child-theme.scss
+++ b/hever/sass/_extra-child-theme.scss
@@ -265,10 +265,14 @@ article .entry-header .entry-title,
   }
 }
 
-.singular .hentry .entry-content {
+.singular:not(.home.hide-homepage-title) .hentry .entry-content {
 	& > *:first-child {
 		&.alignfull {
-			margin-top: -#{2 * map-deep-get($config-global, "spacing", "vertical")};
+			margin-top: -#{0.666 * map-deep-get($config-global, "spacing", "vertical")};
+
+			@include media(mobile) {
+				margin-top: -#{2 * map-deep-get($config-global, "spacing", "vertical")};
+			}
 		}
 	}
 }
