--- a/hever/style-rtl.css
+++ b/hever/style-rtl.css
@@ -1140,7 +1140,7 @@ input.has-focus[type="submit"],
 	color: #1279BE;
 	background: transparent;
 	border: 2px solid currentcolor;
-	padding: 16px-2px 24px;
+	padding: 14px 24px;
 }
 
 .wp-block-button.is-style-outline .wp-block-button__link:hover, .wp-block-button.is-style-outline .wp-block-button__link:focus, .wp-block-button.is-style-outline .wp-block-button__link.has-focus {
@@ -3446,7 +3446,13 @@ article .entry-header .entry-title a:active, article .entry-header .entry-title 
 }
 
 .singular .hentry .entry-content > *:first-child.alignfull {
-	margin-top: -64px;
+	margin-top: -21.312px;
+}
+
+@media only screen and (min-width: 560px) {
+	.singular .hentry .entry-content > *:first-child.alignfull {
+		margin-top: -64px;
+	}
 }
 
 /**
